--- a/speakers.html
+++ b/speakers.html
@@ -382,7 +382,107 @@
 			   </div>
               </div>
   
-  
+  <!-- Speaker Block -->			  
+  <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="banu-prakash.html"><img src="images/speaker/bhanu.jpg" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="banu-prakash.html">M S Banu Prakash Raje Urs</a></h4>
+        <span class="designation">Agile Coach<br>SocGen</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://www.linkedin.com/in/banuprakashurs/"><i class="fab fa-linkedin"></i></a></li>
+               <li><a href="https://twitter.com/banuprakash_urs"><i class="fab fa-twitter"></i></a></li>
+
+        </ul>
+</div>
+
+</div>
+</div>
+
+<!-- Speaker Block -->			  
+<div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="erich-buhler.html"><img src="images/speaker/Erich R.jpg" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="erich-buhler.html">Erich Buhler</a></h4>
+        <span class="designation">Founder and Director <br>Enterprise Agility University</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://www.linkedin.com/in/erich-r-b%C3%BChler-09566067/"><i class="fab fa-linkedin"></i></a></li>
+               <li><a href="https://twitter.com/erichbuhler"><i class="fab fa-twitter"></i></a></li>
+              
+        </ul>
+</div>
+
+</div>
+</div>
+
+<!-- Speaker Block -->			  
+<div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="john-riley.html"><img src="images/speaker/John Riley.jpg" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="john-riley.html">John Riley</a></h4>
+        <span class="designation">Professional Scrum Trainer<br>Ready Set Agile, LLC</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://www.linkedin.com/in/johnrileyglobal/"><i class="fab fa-linkedin"></i></a></li>
+
+        </ul>
+</div>
+
+</div>
+</div>
+
+<!-- Speaker Block -->			  
+<div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="bharath-srinivasan.html"><img src="images/speaker/Bharath S.jpg" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="bharath-srinivasan.html">Bharath Srinivasan</a></h4>
+        <span class="designation">Professional Scrum Trainer<br>Scrum.org</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://www.linkedin.com/in/bharath-srinivasan-03955085/"><i class="fab fa-linkedin"></i></a></li>
+               
+        </ul>
+</div>
+
+</div>
+</div>
+
+<!-- Speaker Block -->			  
+<div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="daria-bagina.htm"><img src="images/speaker/Daria Bagina.png" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="daria-bagina.htm">Daria Bagina</a></h4>
+        <span class="designation">Professional Scrum Trainer<br>Scrum.org</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://www.linkedin.com/in/dariabagina/"><i class="fab fa-linkedin"></i></a></li>
+               <li><a href="https://twitter.com/daria_bagina"><i class="fab fa-twitter"></i></a></li>
+         </ul>
+</div>
+
+</div>
+</div>
   
             </div>
         </div>
