--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                         <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                                             <div class="inner-box">
                                                 <div class="info-box">
-                                                    <h4 class="name"><a href="speakers/Banu-Prakash">Erich Buhler</a></h4>
+                                                    <h4 class="name"><a href="speakers/Erich Buhler">Erich Buhler</a></h4>
                                                     <span class="designation">Founder and Director <br>Enterprise Agility University</span>
                                                 </div>
                                                 <div class="image-box">
@@ -455,7 +455,7 @@
                     <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                             <div class="info-box">
-                                <h4 class="name"><a href="speakers/Banu-Prakash">John Riley</a></h4>
+                                <h4 class="name"><a href="speakers/John Riley">John Riley</a></h4>
                                 <span class="designation">Professional Scrum Trainer<br>Ready Set Agile, LLC</span>
                             </div>
                             <div class="image-box">
