--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
                                                         <h5 class="name">Nagesh Sharma</h5>
                                                         <span class="designation">Chief Executive Officer<br>Flow
                                                             Sphere</span>
+                                                            <h4><a href="schedule.html">Key challenges & ways to navigate to data-driven ROI improvement</a>
                                                     </div>
                                                 </div>
                                             </div>
