--- a/sponsors.html
+++ b/sponsors.html
@@ -211,6 +211,18 @@
             </div>
 
             <div class="sponsors-outer text-center">
+                <h3>Title Sponsors</h3>
+                <div class="row">
+                    <!-- Client Block -->
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+                        <figure class="image-box"><a href="https://www.scrum.org/" target="blank"><img
+                                    src="images/clients/scrumorg-1.svg" alt=""></a></figure>
+                    </div>
+                    <!-- Client End -->
+                </div>
+            </div>
+
+            <div class="sponsors-outer text-center">
 
                 <h3>Platinum Sponsors</h3>
 
