--- a/chris-lukassen.html
+++ b/chris-lukassen.html
@@ -218,8 +218,8 @@
                                 <div class="col-lg-12">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Track 1: 6:15 PM IST </span>
+                                      <p> Topic: <b>A battle-plan for your first 30 days as a Product Owner.</b></p>
                                     </div>
                                 </div>
 
