--- a/padma-satyamurthy.html
+++ b/padma-satyamurthy.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="image-column col-lg-4 col-md-12 col-sm-12">
                     <div class="image-box">
-                        <figure class="image"><img src="images/speaker/speaker-2.jpg" alt=""></figure>
+                        <figure class="image"><img src="images/speaker/Padma-Satyamurthy.jpg" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
 						<li><a href="https://www.linkedin.com/in/padmas/"><i class="fab fa-linkedin"></i></a></li>
@@ -219,8 +219,8 @@
                                 <div class="col-lg-12">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Track 1: 3:15 PM IST </span>
+                                      <p> Topic: <b>Tying the metrics with business impact</b></p>
                                     </div>
                                 </div>
 
