--- a/banu-prakash.html
+++ b/banu-prakash.html
@@ -223,8 +223,8 @@
                                 <div class="col-lg-12">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Track 3: 03:15PM IST </span>
-                                        <p> Topic: <b>Delivering on time is overrated</b></p>
+                                        <span> Track 3: 06:15PM IST </span>
+                                        <p> Topic: <b>Tall tales from transformations - Reminiscences of an Agile Coach</b></p>
                                     </div>
                                 </div>
 
