--- a/nagesh-sharma.html
+++ b/nagesh-sharma.html
@@ -211,8 +211,8 @@
                                 <div class="col-lg-12">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span>  </span>
-                                        <p>  <b>  </b></p>
+                                       <span> Track 2: 3:15 PM IST </span>
+                                      <p> Topic: <b>Key challenges & ways to navigate to data-driven ROI improvement</b></p>
                                     </div>
                                 </div>
 
