--- a/daria-bagina.html
+++ b/daria-bagina.html
@@ -198,8 +198,8 @@
                         <figure class="image"><img src="images/speaker/Daria Bagina.png" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
-                            <li><a href="https://www.linkedin.com/in/banuprakashurs/" target="blank"><i class="fab fa-linkedin"></i></a></li>
-                            <li><a href="https://twitter.com/banuprakash_urs" target="blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/dariabagina/" target="blank"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://twitter.com/daria_bagina" target="blank"><i class="fab fa-twitter"></i></a></li>
                                        
                         </ul>
                     </div>
