--- a/speakers.html
+++ b/speakers.html
@@ -468,7 +468,7 @@
 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
     <div class="inner-box">
         <div class="image-box">
-          <figure class="image"><a href="daria-bagina.htm"><img src="images/speaker/Daria Bagina.png" alt=""></a></figure> 
+          <figure class="image"><a href="daria-bagina.html"><img src="images/speaker/Daria Bagina.png" alt=""></a></figure> 
         </div>
     <div class="info-box">
         <h4 class="name"><a href="daria-bagina.htm">Daria Bagina</a></h4>
