--- a/speakers.html
+++ b/speakers.html
@@ -471,7 +471,7 @@
           <figure class="image"><a href="daria-bagina.html"><img src="images/speaker/Daria Bagina.png" alt=""></a></figure> 
         </div>
     <div class="info-box">
-        <h4 class="name"><a href="daria-bagina.htm">Daria Bagina</a></h4>
+        <h4 class="name"><a href="daria-bagina.html">Daria Bagina</a></h4>
         <span class="designation">Professional Scrum Trainer<br>Scrum.org</span>
           </div>
         <div class="social-box">                            
