--- a/index.html
+++ b/index.html
@@ -514,6 +514,28 @@
                             </div>
                         </div>
                     </div>
+
+                                                            <!-- Speaker Block -->
+                                                            <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                                                                <div class="inner-box">
+                                                                    <div class="info-box">
+                                                                        <h4 class="name"><a href="images/speaker/Alexander Bergmann.jpg">Alexander Bergmann</a></h4>
+                                                                        <span class="designation">Co-Founder<br>Empiriks</span>
+                                                                    </div>
+                                                                    <div class="image-box">
+                                                                        <figure class="image"><a href="alexander-bergmann.html"target="blank"><img
+                                                                                    src="images/speaker/Alexander Bergmann.jpg" alt=""></a></figure>
+                                                                    </div>
+                                                                    <div class="social-box">
+                                                                        <ul class="social-links social-icon-colored">
+                                                                        <li><a href="https://empiriks.de/" target="blank"><i class="fab fa fa-globe"></i></a></li>
+                                        
+                                                                        </ul>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+
                     <!-- Add New Speaker Here -->
                 </div>
             </div>
@@ -758,7 +780,13 @@
                                                         <h5 class="name">Stefan Wolpers</h5>
                                                         <span class="designation">PST, Agile Coach & Scrum
                                                             Master<br>Berlin
-                                                            Product People GmbH</span>
+                                                            Product People GmbH</span></div>
+                                                            
+                                                            <div class="speaker-info">
+                                                                <figure class="thumb"><img
+                                                                        src="images/speaker/Alexander Bergmann.jpg" alt=""></figure>
+                                                                <h5 class="name">Alexander Bergmann</h5>
+                                                                <span class="designation">Co-Founder<br>Empiriks</span>
                                                         <h4><a href="schedule.html">Agile Metrics Survey — The Good, the
                                                                 Bad, and the Unknown</a>
                                                         </h4>
@@ -1088,7 +1116,7 @@
                                 </span>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="schedule.html" class="theme-btn btn-style-two">
+                            <a href="scrumday-schedule.pdf" class="theme-btn btn-style-two">
                                 <span class="btn-title">
                                     Download Complete Schedule
                                 </span>
