--- a/schedule.html
+++ b/schedule.html
@@ -284,10 +284,17 @@
                                                 <div class="speaker-info">
                                                     <figure class="thumb"><img src="images/speaker/Stefan-Wolpers.png" alt=""></figure>
                                                     <h5 class="name">Stefan Wolpers</h5>
-                                                    <span class="designation">PST, Agile Coach & Scrum Master<br>Berlin
-                                                        Product People GmbH</span>
-                                                    <h4><a href="schedule.html">Agile Metrics Survey — The Good, the Bad,
-                                                            and the Unknown</a>
+                                                    <span class="designation">PST, Agile Coach & Scrum
+                                                        Master<br>Berlin
+                                                        Product People GmbH</span></div>
+                                                        
+                                                        <div class="speaker-info">
+                                                            <figure class="thumb"><img
+                                                                    src="images/speaker/Alexander Bergmann.jpg" alt=""></figure>
+                                                            <h5 class="name">Alexander Bergmann</h5>
+                                                            <span class="designation">Co-Founder<br>Empiriks</span>
+                                                    <h4><a href="schedule.html">Agile Metrics Survey — The Good, the
+                                                            Bad, and the Unknown</a>
                                                     </h4>
                                                     <div class="text"> In 2020, more than 1,100 peers from all over the
                                                         world participated in the Agile Metrics Survey. This survey shall
@@ -694,7 +701,7 @@
                     <div class="center">
                         <button>
                             <div class="btn-box" color="#f20487">
-                                <a href="schedule.html" class="theme-btn btn-style-one"><span class="btn-title">Download Complete
+                                <a href="scrumday-schedule.pdf" class="theme-btn btn-style-one"><span class="btn-title">Download Complete
                                         Schedule</span></a>
                             </div>
                         </button>
