--- a/speakers.html
+++ b/speakers.html
@@ -483,6 +483,25 @@
 
 </div>
 </div>
+
+<div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+    <div class="inner-box">
+        <div class="image-box">
+          <figure class="image"><a href="alexander-bergmann.html"><img src="images/speaker/Alexander Bergmann.jpg" alt=""></a></figure> 
+        </div>
+    <div class="info-box">
+        <h4 class="name"><a href="alexander-bergmann.html">Alexander Bergmann</a></h4>
+        <span class="designation">Co-Founder<br>Empiriks</span>
+          </div>
+        <div class="social-box">                            
+        <ul class="social-links social-icon-colored">
+               <li><a href="https://empiriks.de/"><i class="fab fa fa-globe"></i></a></li>
+
+         </ul>
+</div>
+
+</div>
+</div>
   
             </div>
         </div>
