--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                 <ul class="social-links social-icon-colored">
                                     <li><a href="https://www.linkedin.com/in/maarten-dalmijn/"target="blank"><i
                                                 class="fab fa-linkedin"></i></a></li>
-                                    <li><a href="https://maartendalmijn.com"target="blank"><i class="fab fa fa-globe"></i></a></li>
+                                    <li><a href="https://mdalmijn.com/"target="blank"><i class="fab fa fa-globe"></i></a></li>
                                 </ul>
                             </div>
                         </div>
