--- a/speakers.html
+++ b/speakers.html
@@ -311,7 +311,7 @@
 						<div class="social-box">                            
 						<ul class="social-links social-icon-colored">
                                <li><a href="https://www.linkedin.com/in/maarten-dalmijn/"><i class="fab fa-linkedin"></i></a></li>
-							   <li><a href="https://maartendalmijn.com"><i class="fab fa fa-globe"></i></a></li>
+							   <li><a href="https://mdalmijn.com/"><i class="fab fa fa-globe"></i></a></li>
                         </ul>
 				</div>
 
